# bocpd-regime-detection

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  bocpd.py  hazard.py  observation_model.py  pyproject.toml  pyrightconfig.json  test_bocpd.py  test_bounds.py
docs/: bocpd_experiments.md  demo_spy_regime_detection.md  replicate_adams_mackay_fig3.md
examples/: bocpd_experiments.py  bocpd_experiments_univariate.py  dji_1972_1975.csv  replicate_adams_mackay_fig3.py  rmax_runtime_comparison.py
examples/rendered/: bocpd_experiments.md  bocpd_experiments_univariate.md  demo_spy_regime_detection.md  rmax_runtime_comparison.md
notebooks/: bocpd_experiments.ipynb  bocpd_experiments.py  demo_spy_regime_detection.ipynb  demo_spy_regime_detection.py  replicate_adams_mackay_fig3.ipynb  replicate_adams_mackay_fig3.py
src/bocpd/: __init__.py  bocpd.py  hazard.py  observation_model.py  plotting.py
tests/: test_bocpd.py  test_bounds.py  test_incremental.py  test_observation_models.py  test_plotting.py
